
The class redefinition protocol now properly removes the old accessor
methods from their accessors.

** GOOPS method dispatch bug fixed.

Previously, the code updating the method cache in generic functions
got confused if handed method code created in a null environment
(environment = empty list).  It now stands every environment
imaginable (think about it!).

** Garbage collection frequency improved for large malloc heaps

The decision when to run the GC is now done in a way that avoids GCs
with a small yield for heaps with a large amount of malloced storage.
The minimum expected yield for malloc storage is now relative to the
heap size, and not a fixed amount as it was previously.

* Changes to Scheme functions and syntax

** %fast-slot-ref no longer checks slot boundness

This makes the <active-class> metaclass in (oop goops active-slot)
working again.

** eqv? and equal? are now primitive generic functions

This means that it is possible to provide custom comparisons for new
classes by specializing `eqv?' and `equal?' to those classes.

* Changes to the C interface 

** New snarf macros: SCM_PRIMITIVE_GENERIC, SCM_PRIMITIVE_GENERIC_1

These provide a way of adding primitive generics which is equivalent
to SCM_DEFINE and SCM_DEFINE1.


Changes since Guile 1.6.2:

* Changes to the distribution

** Some minor problems with the distribution tarfile have been fixed.

A few files that are automatically generated at build time were
removed from the distribution tarfile.  These changes should not
affect most people, but are relevant to those trying to generate a
post "make distclean" diff against the release tarfile.

* Changes to the stand-alone interpreter
* Changes to Scheme functions and syntax
* Changes to the C interface 


Changes since Guile 1.6.1:

* Changes to the distribution

** GOOPS longer creates layout entries for non-instance slots.

** syntax-case bugs have been fixed

   a) Macro expansion is no longer disturbed if the value of